plan(68): record JPMS two-module decision and jlink realities for Task 1